--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
   "name": "ci4-tailwind-template",
-  "version": "1.0.0",
-  "description": "CodeIgniter 4 project with Tailwind CSS and modern frontend tooling",
+  "version": "2.0.0",
+  "description": "CodeIgniter 4 project with Tailwind CSS v4 and modern frontend tooling",
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host localhost --port 5173",
     "build": "vite build",
     "build:prod": "NODE_ENV=production vite build",
     "preview": "vite preview",
     "watch": "vite build --watch",
     "clean": "rimraf public/assets/*",
-    "lint:css": "stylelint resources/css/**/*.css",
+    "lint:css": "echo 'CSS linting with Tailwind v4 built-in'",
     "format:css": "prettier --write resources/css/**/*.css",
-    "serve": "php spark serve",
-    "start": "concurrently \"npm run dev\" \"npm run serve\""
+    "serve": "php spark serve --port 8080",
+    "start": "concurrently \"npm run dev\" \"npm run serve\"",
+    "test:build": "npm run build && echo 'Build test completed'",
+    "tailwind:build": "npx @tailwindcss/cli -i resources/css/app.css -o public/assets/css/styles.css",
+    "tailwind:watch": "npx @tailwindcss/cli -i resources/css/app.css -o public/assets/css/styles.css --watch",
+    "migrate:v4": "npm run clean && npm run build"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
@@ -25,10 +29,8 @@
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.9",
     "rimraf": "^5.0.5",
-    "stylelint": "^16.1.0",
-    "stylelint-config-standard": "^36.0.0",
-    "tailwindcss": "^3.4.0",
-    "vite": "^5.0.0"
+    "tailwindcss": "^3.4.1",
+    "vite": "^5.4.0"
   },
   "dependencies": {
     "alpinejs": "^3.13.3"
