--- a/composer.json
+++ b/composer.json
@@ -35,9 +35,29 @@
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
-        "sort-packages": true
+        "sort-packages": true,
+        "platform-check": false,
+        "allow-plugins": {
+            "*": true
+        }
     },
     "scripts": {
-        "test": "phpunit"
+        "test": "phpunit",
+        "post-install-cmd": [
+            "@php spark cache:clear || echo 'Cache clear skipped'",
+            "@php -r \"file_exists('writable') || mkdir('writable', 0777, true);\""
+        ],
+        "post-update-cmd": [
+            "@php spark cache:clear || echo 'Cache clear skipped'"
+        ],
+        "compile": [
+            "npm install --only=production",
+            "npm run build:prod || npm run build"
+        ]
+    },
+    "engines": {
+        "php": "^8.1",
+        "node": "18.x",
+        "npm": "9.x"
     }
 }
