--- a/apache.conf
+++ b/apache.conf
@@ -1,7 +1,24 @@
-# Apache Configuration for Render.com - CI4 + Tailwind
-# This file optimizes Apache for CodeIgniter 4 on Render
+# Apache Configuration for Render.com - CI4 + Tailwind (FIXED)
+# This file optimizes Apache for CodeIgniter 4 on Render and fixes favicon access
 
 # Document Root is automatically set to public/ by heroku-php-apache2
+
+# IMPORTANT: Allow access to common web files
+<FilesMatch "\.(ico|png|jpg|jpeg|gif|svg|css|js|woff|woff2|ttf|otf|webp)$">
+    Require all granted
+</FilesMatch>
+
+# Specific favicon access (critical fix)
+<Files "favicon.ico">
+    Require all granted
+</Files>
+
+# Allow all files in public directory by default
+<Directory "/var/www/html/public">
+    Options -Indexes +FollowSymLinks
+    AllowOverride All
+    Require all granted
+</Directory>
 
 # Security Headers
 Header always set X-Content-Type-Options nosniff
@@ -13,8 +30,8 @@ Header always set Permissions-Policy "geolocation=(), microphone=(), camera=()"
 # HSTS for HTTPS (Render provides SSL automatically)
 Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
 
-# Content Security Policy (adjust as needed)
-Header always set Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:;"
+# Content Security Policy (more permissive for favicon and assets)
+Header always set Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self';"
 
 # Compression
 <IfModule mod_deflate.c>
@@ -33,14 +50,14 @@ Header always set Content-Security-Policy "default-src 'self'; script-src 'self'
 <IfModule mod_expires.c>
     ExpiresActive On
     
-    # Images
+    # Images and favicon
+    ExpiresByType image/x-icon "access plus 1 year"
     ExpiresByType image/jpg "access plus 1 year"
     ExpiresByType image/jpeg "access plus 1 year"
     ExpiresByType image/gif "access plus 1 year"
     ExpiresByType image/png "access plus 1 year"
     ExpiresByType image/svg+xml "access plus 1 year"
     ExpiresByType image/webp "access plus 1 year"
-    ExpiresByType image/x-icon "access plus 1 year"
     
     # CSS and JavaScript
     ExpiresByType text/css "access plus 1 year"
@@ -64,44 +81,64 @@ Header always set Content-Security-Policy "default-src 'self'; script-src 'self'
 
 # ETag Optimization
 <IfModule mod_headers.c>
-    <FilesMatch "\.(css|js|png|jpg|jpeg|gif|svg|webp|woff|woff2|ttf|otf)$">
+    <FilesMatch "\.(css|js|png|jpg|jpeg|gif|svg|webp|woff|woff2|ttf|otf|ico)$">
         Header set Cache-Control "public, max-age=31536000, immutable"
         Header unset ETag
     </FilesMatch>
 </IfModule>
 
-# Prevent access to sensitive files
+# Prevent access to sensitive files (but allow web assets)
 <FilesMatch "^\.">
     Require all denied
 </FilesMatch>
 
-<FilesMatch "(^#.*#|\.(bak|conf|dist|fla|in[ci]|log|orig|psd|sh|sql|sw[op])|~)$">
+# Deny access to backup and temporary files
+<FilesMatch "\.(bak|conf|dist|fla|inc|log|orig|psd|sh|sql|sw[op])$">
     Require all denied
 </FilesMatch>
 
-# Protect CodeIgniter system files
-RedirectMatch 403 ^/+app/.*$
-RedirectMatch 403 ^/+writable/(?!uploads/).*$
-RedirectMatch 403 ^/+tests/.*$
-RedirectMatch 403 ^/+vendor/.*$
-RedirectMatch 403 ^/+\.env$
-RedirectMatch 403 ^/+composer\.(json|lock)$
-RedirectMatch 403 ^/+package(-lock)?\.json$
+# Protect CodeIgniter system files (but don't block assets)
+<DirectoryMatch "^/var/www/html/(app|system|tests|vendor)">
+    Require all denied
+</DirectoryMatch>
 
-# CodeIgniter URL Rewriting (already handled by public/.htaccess but backup)
+# Protect writable except uploads
+<DirectoryMatch "^/var/www/html/writable/(?!uploads/)">
+    Require all denied
+</DirectoryMatch>
+
+# Protect config files
+<FilesMatch "^(\.env|composer\.(json|lock)|package(-lock)?\.json|render\.yaml)$">
+    Require all denied
+</FilesMatch>
+
+# CodeIgniter URL Rewriting
 <IfModule mod_rewrite.c>
     RewriteEngine On
     
-    # Remove trailing slashes
+    # Allow direct access to files that exist
+    RewriteCond %{REQUEST_FILENAME} -f
+    RewriteRule ^ - [L]
+    
+    # Allow direct access to directories that exist
+    RewriteCond %{REQUEST_FILENAME} -d
+    RewriteRule ^ - [L]
+    
+    # Remove trailing slashes for non-directories
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_URI} (.+)/$
     RewriteRule ^ %1 [L,R=301]
     
-    # Main CI4 routing
-    RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteCond %{REQUEST_FILENAME} !-d
+    # Route everything else through CI4
     RewriteRule ^(.*)$ index.php/$1 [L,QSA]
 </IfModule>
 
 # Performance: Remove server signature
 ServerTokens Prod
+
+# Error handling for missing favicon (graceful fallback)
+<IfModule mod_rewrite.c>
+    RewriteCond %{REQUEST_URI} ^/favicon\.ico$
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteRule ^.*$ /assets/img/favicon.ico [L,R=301]
+</IfModule>
