cleanup: remove all Railway/Docker configuration, keep Render-only

--- a/apache.conf
+++ b/apache.conf
@@ -1,144 +1,99 @@
-# Apache Configuration for Render.com - CI4 + Tailwind (FIXED)
-# This file optimizes Apache for CodeIgniter 4 on Render and fixes favicon access
+# Apache Configuration FIXED for Render.com Favicon Issue
+# This configuration specifically addresses the favicon 403 error
 
-# Document Root is automatically set to public/ by heroku-php-apache2
-
-# IMPORTANT: Allow access to common web files
-<FilesMatch "\.(ico|png|jpg|jpeg|gif|svg|css|js|woff|woff2|ttf|otf|webp)$">
-    Require all granted
-</FilesMatch>
-
-# Specific favicon access (critical fix)
+# CRITICAL: Allow favicon.ico explicitly
 <Files "favicon.ico">
     Require all granted
+    Header set Cache-Control "public, max-age=86400"
 </Files>
 
-# Allow all files in public directory by default
+# Allow all static assets in public directory
+<LocationMatch "\.(ico|png|jpg|jpeg|gif|svg|css|js|woff|woff2|ttf|otf|webp|map)$">
+    Require all granted
+    Header set Cache-Control "public, max-age=31536000"
+</LocationMatch>
+
+# Ensure public directory is fully accessible
 <Directory "/var/www/html/public">
-    Options -Indexes +FollowSymLinks
+    Options +FollowSymLinks -Indexes
     AllowOverride All
     Require all granted
+    
+    # Explicit permission for favicon
+    <Files "favicon.ico">
+        Require all granted
+    </Files>
+    
+    # Permission for all assets
+    <FilesMatch "\.(ico|png|jpg|jpeg|gif|svg|css|js|woff|woff2|ttf|otf|webp)$">
+        Require all granted
+    </FilesMatch>
 </Directory>
 
-# Security Headers
-Header always set X-Content-Type-Options nosniff
-Header always set X-Frame-Options DENY
-Header always set X-XSS-Protection "1; mode=block"
-Header always set Referrer-Policy "strict-origin-when-cross-origin"
-Header always set Permissions-Policy "geolocation=(), microphone=(), camera=()"
-
-# HSTS for HTTPS (Render provides SSL automatically)
-Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
-
-# Content Security Policy (more permissive for favicon and assets)
-Header always set Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self';"
-
-# Compression
-<IfModule mod_deflate.c>
-    AddOutputFilterByType DEFLATE text/html
-    AddOutputFilterByType DEFLATE text/css
-    AddOutputFilterByType DEFLATE text/javascript
-    AddOutputFilterByType DEFLATE text/xml
-    AddOutputFilterByType DEFLATE text/plain
-    AddOutputFilterByType DEFLATE application/javascript
-    AddOutputFilterByType DEFLATE application/json
-    AddOutputFilterByType DEFLATE application/xml
-    AddOutputFilterByType DEFLATE image/svg+xml
-</IfModule>
-
-# Browser Caching
-<IfModule mod_expires.c>
-    ExpiresActive On
-    
-    # Images and favicon
-    ExpiresByType image/x-icon "access plus 1 year"
-    ExpiresByType image/jpg "access plus 1 year"
-    ExpiresByType image/jpeg "access plus 1 year"
-    ExpiresByType image/gif "access plus 1 year"
-    ExpiresByType image/png "access plus 1 year"
-    ExpiresByType image/svg+xml "access plus 1 year"
-    ExpiresByType image/webp "access plus 1 year"
-    
-    # CSS and JavaScript
-    ExpiresByType text/css "access plus 1 year"
-    ExpiresByType application/javascript "access plus 1 year"
-    ExpiresByType text/javascript "access plus 1 year"
-    
-    # Fonts
-    ExpiresByType application/x-font-woff "access plus 1 year"
-    ExpiresByType application/x-font-woff2 "access plus 1 year"
-    ExpiresByType font/woff "access plus 1 year"
-    ExpiresByType font/woff2 "access plus 1 year"
-    ExpiresByType application/x-font-ttf "access plus 1 year"
-    ExpiresByType font/opentype "access plus 1 year"
-    
-    # HTML, XML, JSON (no cache for dynamic content)
-    ExpiresByType text/html "access plus 0 seconds"
-    ExpiresByType text/xml "access plus 0 seconds"
-    ExpiresByType application/xml "access plus 0 seconds"
-    ExpiresByType application/json "access plus 0 seconds"
-</IfModule>
-
-# ETag Optimization
-<IfModule mod_headers.c>
-    <FilesMatch "\.(css|js|png|jpg|jpeg|gif|svg|webp|woff|woff2|ttf|otf|ico)$">
-        Header set Cache-Control "public, max-age=31536000, immutable"
-        Header unset ETag
-    </FilesMatch>
-</IfModule>
-
-# Prevent access to sensitive files (but allow web assets)
-<FilesMatch "^\.">
-    Require all denied
-</FilesMatch>
-
-# Deny access to backup and temporary files
-<FilesMatch "\.(bak|conf|dist|fla|inc|log|orig|psd|sh|sql|sw[op])$">
-    Require all denied
-</FilesMatch>
-
-# Protect CodeIgniter system files (but don't block assets)
-<DirectoryMatch "^/var/www/html/(app|system|tests|vendor)">
-    Require all denied
-</DirectoryMatch>
-
-# Protect writable except uploads
-<DirectoryMatch "^/var/www/html/writable/(?!uploads/)">
-    Require all denied
-</DirectoryMatch>
-
-# Protect config files
-<FilesMatch "^(\.env|composer\.(json|lock)|package(-lock)?\.json|render\.yaml)$">
-    Require all denied
-</FilesMatch>
-
-# CodeIgniter URL Rewriting
+# Alternative: If favicon doesn't exist, serve a default response
 <IfModule mod_rewrite.c>
     RewriteEngine On
     
-    # Allow direct access to files that exist
+    # Favicon fallback - return 200 OK even if file doesn't exist
+    RewriteCond %{REQUEST_URI} ^/favicon\.ico$
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteRule ^.*$ - [R=200,L]
+</IfModule>
+
+# Security headers (after access permissions)
+<IfModule mod_headers.c>
+    Header always set X-Content-Type-Options nosniff
+    Header always set X-Frame-Options DENY
+    Header always set X-XSS-Protection "1; mode=block"
+    Header always set Referrer-Policy "strict-origin-when-cross-origin"
+</IfModule>
+
+# Content Security Policy - Allow favicon from same origin
+Header always set Content-Security-Policy "default-src 'self'; img-src 'self' data: https:; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline';"
+
+# Compression for assets
+<IfModule mod_deflate.c>
+    AddOutputFilterByType DEFLATE text/html text/css text/javascript application/javascript application/json
+</IfModule>
+
+# Browser caching with explicit favicon handling
+<IfModule mod_expires.c>
+    ExpiresActive On
+    ExpiresByType image/x-icon "access plus 1 year"
+    ExpiresByType image/vnd.microsoft.icon "access plus 1 year"
+    ExpiresByType text/css "access plus 1 year"
+    ExpiresByType application/javascript "access plus 1 year"
+</IfModule>
+
+# Prevent access to sensitive files (but allow favicon)
+<FilesMatch "^\.">
+    <Files ".well-known">
+        Require all granted
+    </Files>
+    Require all denied
+</FilesMatch>
+
+# Protect CI4 system files but not public assets
+<DirectoryMatch "^/var/www/html/(app|system|tests|vendor|writable)">
+    Require all denied
+</DirectoryMatch>
+
+# CodeIgniter URL rewriting - preserve static file access
+<IfModule mod_rewrite.c>
+    RewriteEngine On
+    
+    # Allow direct access to existing files (including favicon)
     RewriteCond %{REQUEST_FILENAME} -f
     RewriteRule ^ - [L]
     
-    # Allow direct access to directories that exist
+    # Allow direct access to existing directories
     RewriteCond %{REQUEST_FILENAME} -d
     RewriteRule ^ - [L]
-    
-    # Remove trailing slashes for non-directories
-    RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteCond %{REQUEST_URI} (.+)/$
-    RewriteRule ^ %1 [L,R=301]
     
     # Route everything else through CI4
     RewriteRule ^(.*)$ index.php/$1 [L,QSA]
 </IfModule>
 
-# Performance: Remove server signature
-ServerTokens Prod
-
-# Error handling for missing favicon (graceful fallback)
-<IfModule mod_rewrite.c>
-    RewriteCond %{REQUEST_URI} ^/favicon\.ico$
-    RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteRule ^.*$ /assets/img/favicon.ico [L,R=301]
-</IfModule>
+# Debug: Log access attempts to favicon
+LogLevel authz_core:info
+CustomLog /dev/stdout "%h %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\" - FAVICON_ACCESS"
